# FaceX

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/facex/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  image_converter.cpp
app/src/main/java/com/example/facex/: Application.kt  MainActivity.kt
app/src/main/java/com/example/facex/data/: Utiles.kt  Utilities.kt
app/src/main/java/com/example/facex/data/local/: DefaultLogger.kt  DefaultPerformanceTracker.kt
app/src/main/java/com/example/facex/data/repository/: CameraRepositoryImpl.kt  MLRepositoryImpl.kt  PersonRepositoryImpl.kt
app/src/main/java/com/example/facex/di/: DatabaseModule.kt  DispatcherModule.kt  FaceProcessorModule.kt  PerformanceModule.kt  PerformanceTrackerModule.kt  StorageModule.kt
app/src/main/java/com/example/facex/domain/: PerformanceLogger.kt  Utilities.kt
app/src/main/java/com/example/facex/ml/: TFLiteModelHandler.kt
app/src/main/java/com/example/facex/ui/: FaceState.kt  FrameData.kt  TrackedFace.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/raw/: splash_animation.lottie
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: provider_paths.xml
app/src/test/java/com/example/facex/: ExampleUnitTest.kt
benchmark/src/main/java/com/example/benchmark/: ExampleStartupBenchmark.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
openCV/: build.gradle
(+293 files in other folders)
